<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VotAR</string>
    <string name="photo_of_the_audience">This is an alpha (unfinished) version for testing purposes only. Use the camera button to begin.</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="vote_a">a</string>
    <string name="vote_b">b</string>
    <string name="vote_c">c</string>
    <string name="vote_d">d</string>
    <string name="nowificon">No WiFi connection</string>
    <string name="wifidisabled">WiFi disabled in VotAR settings</string>
    <string name="quit_title">Quit ?</string>
    <string name="quit_message">Do you want to quit VotAR ?</string>
	<string name="title_processing_1">Processing image</string>
	<string name="title_processing_2">Processing image: </string>
	<string name="processing_1">Initializing&#x2026;</string>
	<string name="processing_2">Preprocessing surface&#x2026;</string>
	<string name="processing_3">Examining color patterns&#x2026;</string>
	<string name="processing_4">Compiling results&#x2026;</string>
</resources>